# led-wave-potentiometer

./: .gitignore  README.md
cpp/: Makefile
cpp/src/: adc.cpp  adc.hpp  avr_io.hpp  display.cpp  display.hpp  freertos.hpp  leds.cpp  leds.hpp  main.cpp
cpp/src/tm1637/: tm1637.cpp  tm1637.hpp  tm1637font.hpp
freertos-10.3.1/: Makefile
freertos-10.3.1/FreeRTOS/: list.d  queue.d  tasks.c  tasks.d
freertos-10.3.1/FreeRTOS/MemMang/: heap_1.d
freertos-10.3.1/FreeRTOS/portable/GCC/ATMega323/: port.c  port.d
freertos-10.3.1/FreeRTOS_Minimal/: FreeRTOSConfig.h  main.c  makefile
freertos-10.3.1/include/: FreeRTOSConfig.h  portable.h  portmacro.h
freertos-10.3.1/src/: freertos_rs.c
freertos-10.3.1/src/atmega88pa/: port.c
led_wave_potentiometer/: Cargo.toml  Makefile  Xargo.toml  atmega88pa.json  dump.txt
led_wave_potentiometer/.cargo/: config
led_wave_potentiometer/src/: adc.rs  display.rs  freertos_allocator.rs  leds.rs  main.rs  usart.rs
