[package]
name = "led_wave_potentiometer"
edition = "2018"
version = "0.1.0"
authors = [ "Logarithmus <opensource@logarithmus.dev>" ]
license = "MIT"

[dependencies]
avrd = { git = "https://github.com/Logarithmus/avrd", branch = "master", default-features = false }
panic-abort = "0.3"
freertos_rs = { path = "../../freertos.rs" }
tm1637 = { git = "https://github.com/jessebraham/tm1637-rs", branch = "v2-traits" }

[profile.release]
debug = true
codegen-units = 1
opt-level = "s"
lto = true
panic = "abort"